--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,8 @@
     theme: Food Ordering System;
     version: 1.0;
 */
-{
-    margin: 0 0;
-    padding: 0 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 .container{
     width: 80%;
     margin: 0 auto;
@@ -276,3 +273,79 @@ fieldset{
         width: 100%;
     }
 }
+
+/* submenu settings */
+
+.dropbtn {
+    background-color: #ff3838;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 5px 10px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+  }
+  
+  .dropdown-content a:hover {
+      background-color: #f1f1f1
+    }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #ff3838c3;
+  }
+
+  /* order page css */
+
+  .ordersection{
+      width: 80%;
+      margin: auto;
+      font-family: 'Roboto', sans-serif;
+  }
+
+  .ordersection h2{
+      padding: 5px;
+      font-size: 50px;
+      font-weight: 400;
+  }
+
+  .order_table{
+      width: 100%;
+      margin: 50px auto;
+      text-align: center;
+      color: black;
+      font-weight: 400;
+  }
+
+  .order_table th{
+      color: gray;
+      padding: 10px;
+  }
+
+  .order_table td{
+      padding: 10px;
+  }
