--- a/css/style.css
+++ b/css/style.css
@@ -349,3 +349,68 @@ fieldset{
   .order_table td{
       padding: 10px;
   }
+
+  /* admin panel css */
+
+  .adminheadsection{
+    width: 80%;
+    margin: auto;
+  }
+
+  .progress{
+      display: flex;
+      width: 80%;
+      margin: auto;
+      justify-content: space-between;
+  }
+
+  .progress li{
+      display: inline-block;
+      text-decoration: none;
+  }
+
+  .statuselement{
+      text-align: center;
+      color: white;
+      padding: 10px;
+      min-width: 150px;
+      border-radius: 5px;
+  }
+
+  .st1{
+      background-color: #00B8A9;
+  }
+  .st2{
+      background-color: #F24A72;
+  }
+  .st3{
+      background-color: #F07B3F;
+  }
+  .st4{
+      background-color: #3EC1D3;
+  }
+
+  /* css for buttonmenu */
+
+  .p2{
+    display: flex;
+    width: 50%;
+    margin: auto;
+    margin-top: 30px;
+    justify-content: space-between;
+}
+
+.p2 li{
+    display: inline-block;
+    text-decoration: none;
+}
+
+.options{
+    text-align: center;
+      color: white;
+      background-color: #27496D;
+      cursor: pointer;
+      padding: 2px;
+      min-width: 150px;
+      border-radius: 5px;
+}
